force-app/main/default/objects/Advisor_Payment__c/Advisor_Payment__c.object-meta.xml
<CustomObject>
    <description>Represents a payment made for an advisor term</description>
    <label>Advisor Payment</label>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Advisor Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisor Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>