force-app/main/default/objects/Advisor_Payment__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advisor for this advisor payment</description>
    <inlineHelpText>The advisor for this advisor payment</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>Advisor__c</referenceTo>
    <relationshipLabel>Advisor Payments</relationshipLabel>
    <relationshipName>Advisor_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>