force-app/main/default/objects/Advisor_Payment__c/fields/Advisor_name__c.field-meta.xml
<CustomField>
    <fullName>Advisor_name__c</fullName>
    <description>Name of the linked advisor term&apos;s advisor</description>
    <formula>Advisor_Term__r.Advisor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the linked advisor term&apos;s advisor</inlineHelpText>
    <label>Advisor name</label>
    <type>Text</type>
</CustomField>