force-app/main/default/objects/Advisor_Payment__c/fields/Advisor_Term__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Term__c</fullName>
    <description>The advisor term to which this payment applies</description>
    <inlineHelpText>The advisor term to which this payment applies</inlineHelpText>
    <label>Advisor Term</label>
    <referenceTo>Advisor_Term__c</referenceTo>
    <relationshipLabel>Advisor Payments</relationshipLabel>
    <relationshipName>Advisor_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>