force-app/main/default/objects/Advisor_Payment__c/fields/Advisor_Term_status__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Term_status__c</fullName>
    <description>Status from parent proposal record</description>
    <formula>Advisor_Term__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status from parent proposal record</inlineHelpText>
    <label>Advisor Term status</label>
    <type>Text</type>
</CustomField>