force-app/main/default/objects/Advisor_Payment__c/fields/Currency_of_payment__c.field-meta.xml
<CustomField>
    <fullName>Currency_of_payment__c</fullName>
    <description>The currency used for this payment</description>
    <inlineHelpText>The currency used for this payment</inlineHelpText>
    <label>Currency of payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>