force-app/main/default/objects/Advisor_Payment__c/fields/Date_advisor_non_receipt__c.field-meta.xml
<CustomField>
    <fullName>Date_advisor_non_receipt__c</fullName>
    <description>Date that we learned that the advisor has not received the payment</description>
    <inlineHelpText>Date that we learned that the advisor has not received the payment</inlineHelpText>
    <label>Date advisor non receipt</label>
    <type>Date</type>
</CustomField>