force-app/main/default/objects/Advisor_Payment__c/fields/Date_funds_receipt_ackd__c.field-meta.xml
<CustomField>
    <fullName>Date_funds_receipt_ackd__c</fullName>
    <description>Date that the advisor acknowledged receipt of the funds</description>
    <inlineHelpText>Date that the advisor acknowledged receipt of the funds</inlineHelpText>
    <label>Date funds receipt ackd</label>
    <type>Date</type>
</CustomField>