force-app/main/default/objects/Advisor_Payment__c/fields/Date_paid__c.field-meta.xml
<CustomField>
    <fullName>Date_paid__c</fullName>
    <description>Date that the payment was processed by the bank (or Western Union, etc.) May be different from Date paid accounting if payment was retried at a later date following a stall. 
Note: status dependent on this date</description>
    <inlineHelpText>Date that the payment was processed by the bank (or Western Union, etc.) May be different from Date paid accounting if payment was retried at a later date following a stall. 
Note: status dependent on this date</inlineHelpText>
    <label>Date paid</label>
    <type>Date</type>
</CustomField>