force-app/main/default/objects/Advisor_Payment__c/fields/Date_paid_accounting__c.field-meta.xml
<CustomField>
    <fullName>Date_paid_accounting__c</fullName>
    <description>The date paid assigned by Finance</description>
    <inlineHelpText>The date paid assigned by Finance</inlineHelpText>
    <label>Date paid accounting</label>
    <type>Date</type>
</CustomField>