force-app/main/default/objects/Advisor_Payment__c/fields/Date_payment_ack_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_payment_ack_submitted__c</fullName>
    <description>The date on which the payment ack form (if any) was submitted</description>
    <inlineHelpText>The date on which the payment ack form (if any) was submitted</inlineHelpText>
    <label>Date payment ack submitted</label>
    <type>Date</type>
</CustomField>