force-app/main/default/objects/Advisor_Payment__c/fields/Date_problem_released__c.field-meta.xml
<CustomField>
    <fullName>Date_problem_released__c</fullName>
    <description>The date (if any) on which a problem (caused by recall, return, non-receipt, etc.) was released and processing of the advisor term allowed to proceed</description>
    <inlineHelpText>The date (if any) on which a problem (caused by recall, return, non-receipt, etc.) was released and processing of the advisor term allowed to proceed</inlineHelpText>
    <label>Date problem released</label>
    <type>Date</type>
</CustomField>