force-app/main/default/objects/Advisor_Payment__c/fields/Date_recall_initiated__c.field-meta.xml
<CustomField>
    <fullName>Date_recall_initiated__c</fullName>
    <description>The date (if any) on which the process of recalling this payment began</description>
    <inlineHelpText>The date (if any) on which the process of recalling this payment began</inlineHelpText>
    <label>Date recall initiated</label>
    <type>Date</type>
</CustomField>