force-app/main/default/objects/Advisor_Payment__c/fields/Date_recalled__c.field-meta.xml
<CustomField>
    <fullName>Date_recalled__c</fullName>
    <description>Date that the payment was recalled</description>
    <inlineHelpText>Date that the payment was recalled</inlineHelpText>
    <label>Date recalled</label>
    <type>Date</type>
</CustomField>