force-app/main/default/objects/Advisor_Payment__c/fields/Date_returned__c.field-meta.xml
<CustomField>
    <fullName>Date_returned__c</fullName>
    <description>Date that the payment was returned</description>
    <inlineHelpText>Date that the payment was returned</inlineHelpText>
    <label>Date returned</label>
    <type>Date</type>
</CustomField>