force-app/main/default/objects/Advisor_Payment__c/fields/Has_problem__c.field-meta.xml
<CustomField>
    <fullName>Has_problem__c</fullName>
    <description>Checked if this payment has a problem, that is, if there is a date recall initiated, date recalled, date returned, or date of advisor non-receipt, and it&apos;s later than date paid, and the problem hasn&apos;t been released</description>
    <formula>AND(
 NOT(ISBLANK( Date_paid__c )),
 OR(
  AND(
   NOT(ISBLANK( Date_recall_initiated__c )),
   Date_recall_initiated__c &gt;= Date_paid__c,
   (ISBLANK(Date_problem_released__c) || Date_problem_released__c &lt; Date_recall_initiated__c)
  ),
  AND(
   NOT(ISBLANK( Date_recalled__c )),
   Date_recalled__c &gt;= Date_paid__c,
   (ISBLANK(Date_problem_released__c) || Date_problem_released__c &lt; Date_recalled__c)
  ),
  AND(
   NOT(ISBLANK( Date_returned__c )),
   Date_returned__c &gt;= Date_paid__c,
   (ISBLANK(Date_problem_released__c) || Date_problem_released__c &lt; Date_returned__c)
  ),
  AND(
   NOT(ISBLANK( Date_advisor_non_receipt__c )),
   Date_advisor_non_receipt__c &gt;= Date_paid__c,
   (ISBLANK(Date_problem_released__c) || Date_problem_released__c &lt; Date_advisor_non_receipt__c)
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this payment has a problem, that is, if there is a date recall initiated, date recalled, date returned, or date of advisor non-receipt, and it&apos;s later than date paid, and the problem hasn&apos;t been released</inlineHelpText>
    <label>Has problem</label>
    <type>Checkbox</type>
</CustomField>