force-app/main/default/objects/Advisor_Payment__c/fields/In_process_or_flow__c.field-meta.xml
<CustomField>
    <fullName>In_process_or_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this record is currently being updated in a process or flow. Prevents recursive calls.</description>
    <inlineHelpText>Checked if this record is currently being updated in a process or flow. Prevents recursive calls.</inlineHelpText>
    <label>In process or flow</label>
    <type>Checkbox</type>
</CustomField>