force-app/main/default/objects/Advisor_Payment__c/fields/Is_inactive__c.field-meta.xml
<CustomField>
    <fullName>Is_inactive__c</fullName>
    <description>Payment is considered inactive if there is a date returned and the parent advisor term is fully paid.</description>
    <formula>AND(NOT(ISBLANK( Date_returned__c )), Advisor_Term__r.To_be_paid__c == 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment is considered inactive if there is a date returned and the parent advisor term is fully paid.</inlineHelpText>
    <label>Is inactive</label>
    <type>Checkbox</type>
</CustomField>