force-app/main/default/objects/Advisor_Payment__c/fields/Keep_confidential__c.field-meta.xml
<CustomField>
    <fullName>Keep_confidential__c</fullName>
    <description>Checked if this advisor payment belongs to an advisor that is marked as Keep Confidential</description>
    <formula>Advisor_Term__r.Advisor__r.Keep_confidential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this advisor payment belongs to an advisor that is marked as Keep Confidential</inlineHelpText>
    <label>Keep confidential</label>
    <type>Checkbox</type>
</CustomField>