force-app/main/default/objects/Advisor_Payment__c/fields/Net_paid__c.field-meta.xml
<CustomField>
    <fullName>Net_paid__c</fullName>
    <description>Amount paid - amount returned (unless date recalled is more recent than date paid)</description>
    <formula>IF(
 (ISBLANK(Date_paid__c) &amp;&amp; ISBLANK(Date_paid_accounting__c)) || 
 Date_recalled__c &gt;= Date_paid__c,
 0,
 Amount_paid__c -  Amount_returned__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount paid - amount returned (unless date recalled is more recent than date paid)</inlineHelpText>
    <label>Net paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>