force-app/main/default/objects/Advisor_Payment__c/fields/Payment_ref__c.field-meta.xml
<CustomField>
    <fullName>Payment_ref__c</fullName>
    <description>Should start with &apos;cash&apos; for cash, &apos;ck&apos; for check, &apos;of&apos; for official check, or &apos;mt&apos; for Western Union. All other codes should be used for wire transfers with different numbering conventions depending on the bank.</description>
    <inlineHelpText>Should start with &apos;cash&apos; for cash, &apos;ck&apos; for check, &apos;of&apos; for official check, or &apos;mt&apos; for Western Union. All other codes should be used for wire transfers with different numbering conventions depending on the bank.</inlineHelpText>
    <label>Payment ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>