force-app/main/default/objects/Advisor_Payment__c/fields/Payment_type__c.field-meta.xml
<CustomField>
    <fullName>Payment_type__c</fullName>
    <description>The type of payment: Wire, Western Union, GFW check, Official check</description>
    <formula>/* Check for special types based on first chars of payment ref.
 * Rest are wires with bank-dependent numbering conventions.
 */
IF(CONTAINS(LOWER( Payment_ref__c ), &quot;cash&quot;), &quot;Cash&quot;,
 IF(LEFT (LOWER( Payment_ref__c ),2) = &quot;ck&quot;, &quot;GFW check&quot;,
 IF(LEFT (LOWER( Payment_ref__c ),2) = &quot;of&quot;, &quot;Official check&quot;,
 IF(LEFT (LOWER( Payment_ref__c ),2) = &quot;mt&quot;, &quot;Western Union&quot;,
 &quot;Wire&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The type of payment: Wire, Western Union, GFW check, Official check</inlineHelpText>
    <label>Payment type</label>
    <type>Text</type>
</CustomField>