force-app/main/default/objects/Advisor_Payment__c/fields/Reason_for_stall__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_stall__c</fullName>
    <description>The reason this payment is/was stalled (should include a date so that it still makes sense after Date Stalled has been cleared)</description>
    <inlineHelpText>The reason this payment is/was stalled (should include a date so that it still makes sense after Date Stalled has been cleared)</inlineHelpText>
    <label>Reason for stall</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>