force-app/main/default/objects/Advisor_Payment__c/fields/Recipient_type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_type__c</fullName>
    <description>If non-empty, then special recipient type, for example, &quot;Individual account&quot;</description>
    <inlineHelpText>If non-empty, then special recipient type, for example, &quot;Individual account&quot;</inlineHelpText>
    <label>Recipient type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fiscal sponsor</fullName>
            </value>
            <value>
                <fullName>Individual beneficiary</fullName>
            </value>
            <value>
                <fullName>Joint account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>