force-app/main/default/objects/Advisor_Payment__c/validationRules/AmountPaidBLANK.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountPaidBLANK</fullName>
    <active>true</active>
    <description>Amount Paid must not be blank</description>
    <errorConditionFormula>ISBLANK(Amount_paid__c)</errorConditionFormula>
    <errorDisplayField>Amount_paid__c</errorDisplayField>
    <errorMessage>Amount Paid must not be blank</errorMessage>
</ValidationRule>