force-app/main/default/objects/Advisor_Payment__c/validationRules/DatePaidAccountingBLANK.validationRule-meta.xml
<ValidationRule>
    <fullName>DatePaidAccountingBLANK</fullName>
    <active>true</active>
    <description>Date Paid Accounting must not be blank</description>
    <errorConditionFormula>ISBLANK(Date_paid_accounting__c)</errorConditionFormula>
    <errorDisplayField>Date_paid_accounting__c</errorDisplayField>
    <errorMessage>Date Paid Accounting must not be blank</errorMessage>
</ValidationRule>