force-app/main/default/objects/Advisor_Payment__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Advisor_Term__c</columns>
    <columns>Advisor_name__c</columns>
    <columns>Amount_paid__c</columns>
    <columns>Date_paid__c</columns>
    <columns>Date_stalled__c</columns>
    <columns>Has_problem__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>